Add snapshot with auto-purge and scheduled snapshots
- Update snapshot() to purge old archive segments after taking snapshot
- Add getLatestSnapshotPosition() to track snapshot log position
- Add auto-snapshot scheduler with configurable interval
- Add /api/admin/auto-snapshot endpoint (POST/DELETE/GET)
- Include snapshot status in /api/admin/status response
- Move archive directory from /tmp to /dev/shm for lower latency

API changes:
- POST /api/admin/auto-snapshot {"intervalMinutes": N} - enable
- DELETE /api/admin/auto-snapshot - disable
- GET /api/admin/auto-snapshot - check status

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>